# Course_work_3

./: .gitignore  README.md  pyproject.toml
funcs/: format_requisites.py  format_transactions.py  last_5_transactions.py  main.py
tests/: test_format_requisites.py  test_format_transactions.py  test_last_5_transactions.py
